1999-10-01  Roland McGrath  <roland@baalperazim.frob.com>

	* term.h (NO_DEVICE): New macro, bit for termflags.
	(termflags): Change type to uint_fast32_t.
	* devio.c (device_open_reply): For D_NO_SUCH_DEVICE error reply, set
	NO_DEVICE flag in termflags.
	* users.c (open_hook): If NO_DEVICE flag set, return ENXIO immediately.
	If we put out an open request, check for that bit as well as
	NO_CARRIER changing in termflags and diagnose with ENXIO.
	* Makefile (device_replyServer-CPPFLAGS): New variable, turn off
	TypeCheck for this stub.  This is necessary for error replies to get
	through to our server-side functions in devio.c.

1999-09-13  Roland McGrath  <roland@baalperazim.frob.com>

	* users.c: Reverted changes related to io_map_segment.

1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>

	* users.c (trivfs_S_io_map): Renamed to ...
	(trivfs_S_io_map_segment): ... here.

1999-07-23  Roland McGrath  <roland@baalperazim.frob.com>

	* term.h (ILCASE, OLCASE): Use IUCLC, OLCUC if defined.

1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>

	* term.h: Add #include <sys/mman.h>.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* ptyio.c (pty_io_read): Use mmap instead of vm_allocate.
	* users.c (trivfs_S_io_read): Likewise.

1999-05-24  Mark Kettenis  <kettenis@gnu.org>

	* devio.c: Include <assert.h>, <errno.h> and <error.h>.  Do
	not include <stdio.h> and <sys/types.h>.
	Reorganize the order of inclusion of the header files a bit and
	document the baud-rate hackery.  Include <termios.h> explicitely.
	(init_devio): Use new local variable ERR instead of ERRNO.  Use
	error instead of perror and exit to report failure.
	(devio_desert_dtr): Declare BITS as `int' instead of
	`dev_status_t'.

1999-05-13  Roland McGrath  <roland@baalperazim.frob.com>

	* users.c (trivfs_S_file_chown): Either arg being -1 means don't
	change that id.

1999-03-22  Roland McGrath  <roland@baalperazim.frob.com>

	* devio.c (initial_open): Fix typos.
