@@ -1,3 +1,14 @@
+1999-10-04  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* term.h, devio.c, users.c: Revert previous change.  Do it this
+	way instead:
+ 	* users.c (report_carrier_error): New function.
+ 	(carrier_error): New static global variable.
+ 	(open_hook): Deal with errors from carrier open.
+ 	* devio.c (device_open_reply): Move the !RETURNCODE case out of
+ 	the "initial open" case and use report_carrier_error.
+ 	* term.h (report_carrier_error): Declare new function.
+
 1999-10-01  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* term.h (NO_DEVICE): New macro, bit for termflags.
@@ -7,6 +18,7 @@
 	* users.c (open_hook): If NO_DEVICE flag set, return ENXIO immediately.
 	If we put out an open request, check for that bit as well as
 	NO_CARRIER changing in termflags and diagnose with ENXIO.
+	
 	* Makefile (device_replyServer-CPPFLAGS): New variable, turn off
 	TypeCheck for this stub.  This is necessary for error replies to get
 	through to our server-side functions in devio.c.
